Added UUID field

--- a/klet/searchtool/templates/message.html
+++ b/klet/searchtool/templates/message.html
@@ -11,7 +11,7 @@
 </head>
 <br>
 <br>
-<h1> This page will populate the database</h1>
+<h1> This page will make the changes below in the data base.</h1>
 <h2> {{message}}</h2>
 <script>
 // $(document).ready(function () {
