Style purple 28th Apr

--- a/klet/searchtool/templates/navbar.html
+++ b/klet/searchtool/templates/navbar.html
@@ -4,12 +4,15 @@
     color: #fff;
     margin-right: 20px;
   }
+  .uw-bg{
+    background-color: #4b2e83;
+  }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark uw-bg">
+  <a><img src="/searchtool/templates/W.png"></a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
     </ul>
   </div>
-
 </nav>
