--- a/klet/searchtool/templates/main.html
+++ b/klet/searchtool/templates/main.html
@@ -18,10 +18,14 @@
 	{% endblock %}
     </div>
 	<hr>
-	<!-- <h5>Our footer</h5> -->
-	
 </body>
-
+<footer class="text-center">
+	<div class="text-center" style="color:#4b2e83;">
+	<p> 
+		© 2023 Copyright: <a style="color:#4b2e83" href="https://uw.edu/">University of Washington</a> | Seattle, WA
+	</p>
+	</div>
+</footer>
 <!-- <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.13.2/js/dataTables.bootstrap5.min.js" crossorigin="anonymous"></script> -->
