--- a/klet/searchtool/templates/search.html
+++ b/klet/searchtool/templates/search.html
@@ -173,7 +173,7 @@
 				</button>
 				</div>
 				<div class="modal-body">
-				Form to fill and request the new record will appear here!!
+				Form to fill and request the new record will appear here soon!!
 				</div>
 				<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
