--- a/klet/searchtool/templates/navbar.html
+++ b/klet/searchtool/templates/navbar.html
@@ -10,7 +10,7 @@
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark uw-bg">
-  <a><img src="/searchtool/templates/W.png"></a>
+  <!-- <a><img src="/searchtool/templates/W.png"></a> -->
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
     </ul>
