--- a/klet/searchtool/templates/search.html
+++ b/klet/searchtool/templates/search.html
@@ -15,10 +15,6 @@
 	{
 		background-color: #85754d !important;
 	}
-	.page-link
-	{
-		/* background-color: #4b2e83 !important; */
-	}
 	.pagination
 	{
 		--bs-pagination-active-bg: #4b2e83 !important;
@@ -35,7 +31,7 @@
 </style>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href='/searchtool/templates/style/customstyle.css'>
+	<!-- <link rel="stylesheet" href='/searchtool/templates/style/customstyle.css'> -->
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/css/dataTables.bootstrap.min.css'>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500" rel="stylesheet"/>
@@ -68,6 +64,7 @@
 							<th>Author</th>
 							<th>Author(Eng)</th>
 							<th>Translation Title</th>
+							<th>Korean Title</th>
 							<th>Translator</th>
 							<th>Source</th>
 							<th>Year</th>
@@ -100,6 +97,12 @@
 							<td></td>
 							{% else %}
 							<td>{{record.workTitle}}</td>
+							{% endif %}	
+
+							{% if record.workTitleKorean == "nan" %}
+							<td></td>
+							{% else %}
+							<td>{{record.workTitleKorean}}</td>
 							{% endif %}	
 
 							{% if record.translator == "nan" %}
@@ -142,18 +145,18 @@
 		<button type="button" id="AdvSearch" class="btn btn-primary" onclick="showDiv()">Advanced Search</button>
 		<div class="col">
 			<h4>Authors Korean</h4>
-			<div class="card card-body overflow-auto" style="height: 250px;">
+			<div class="card card-body overflow-auto" style="height: 2500px;">
 				<ul>
 					{% for krName in NamesKr %}
-						<li><a href="{% url 'search' %}?authorKorean={{krName}}">{{krName}}</a></li>
+						<a class="row" href="{% url 'search' %}?authorKorean={{krName}}">{{krName}}</a>
 					{% endfor %}
 				</ul>
 			</div>
 			<h4>Authors English</h4>
-			<div class="card card-body overflow-auto" style="height: 250px;margin-bottom: 15px;">
+			<div class="card card-body overflow-auto" style="height: 2500px; margin-bottom: 15px;">
 				<ul>
 					{% for engName in NamesEng %}
-						<li><a href="{% url 'search' %}?authorEnglish2={{engName}}">{{engName}}</a></li>
+						<a class="row" href="{% url 'search' %}?authorEnglish2={{engName}}">{{engName}}</a>
 					{% endfor %}
 				</ul>
 			</div>
@@ -186,14 +189,32 @@
 </div>
 <script>
 	$(document).ready(function() {
-	$("#sort").DataTable();
-	document.getElementsByClassName("form-control").style="width:500px;background-color:#CBDCFF";
-	document.getElementsByClassName("form-control-sm").style="width:500px;background-color:#CBDCFF";
-	document.getElementsByClassName("form-control").placeholder="Search for any key word";
-	document.getElementsByClassName("form-control-sm").placeholder="Search for any key word";
-	$('#exampleModalCenter').on('shown.bs.modal', function () {
-			$('#myInput').trigger('focus')
+		let inputUrl = new URL(window.location.href);
+		let inputParams = new URLSearchParams(inputUrl.search);
+		$("#sort").DataTable({
+			"pageLength": 100,
+			"lengthMenu": [ 50, 100, 200, 300, 400, 500 ],
+		});
+		document.getElementsByClassName("form-control").style="width:500px;background-color:#CBDCFF";
+		document.getElementsByClassName("form-control-sm").style="width:500px;background-color:#CBDCFF";
+		document.getElementsByClassName("form-control").placeholder="Search for any key word";
+		document.getElementsByClassName("form-control-sm").placeholder="Search for any key word";
+		$('#exampleModalCenter').on('shown.bs.modal', function () {
+				$('#myInput').trigger('focus')
 		})
+		if(inputParams.has("authorEnglish2"))
+		{
+			console.log("Are we here?");
+			document.getElementById('basicSearch').style.display = "block";
+			document.getElementById('AdvSearch').className="btn btn-secondary";
+			document.getElementById('AdvSearch').innerHTML="Search";
+		}
+		else
+		{
+			document.getElementById('basicSearch').style.display = "none";
+			document.getElementById('AdvSearch').className="btn btn-primary";
+			document.getElementById('AdvSearch').innerHTML="Advanced Search";
+		}
 	});
 	function showDiv() {
 		if(document.getElementById('basicSearch').style.display == "none")
