--- a/klet/searchtool/templates/search.html
+++ b/klet/searchtool/templates/search.html
@@ -45,10 +45,13 @@
 				<form method="get">
 					<div class="form-group">
 						{{myFilter.form}}
-					</div>
-					<button class="btn btn-primary" style="background-color: #4b2e83;" type="submit">
+					</div>					
+					<button class="btn btn-primary" type="submit">
 						Search
 					</button>
+					<a href="{% url 'search' %}">
+						Clear Search
+					</a>
 				</form>
 			</div>
 		</div>
@@ -67,9 +70,9 @@
 							<th>Korean Title</th>
 							<th>Translator</th>
 							<th>Source</th>
-							<th>Year</th>
 							<th>Publisher</th>
 							<th style="display: none;">authorEnglish2</th>
+							<th>Year</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -109,23 +112,25 @@
 							<td></td>
 							{% else %}
 							<td>{{record.translator}}</td>
-							{% endif %}	
-							
+							{% endif %}
+
 							{% if record.sourceTitle == "nan" %}
 							<td></td>
 							{% else %}
 							<td>{{record.sourceTitle}}</td>
-							{% endif %}	
-							{%if record.year == "nan" %}
-							<td></td>
-							{% else %}
-							<td>{{record.year}}</td>
-							{% endif %}	
+							{% endif %}
+
 							{%if record.publisher == "nan" %}
 							<td></td>
 							{% else %}
 							<td>{{record.publisher}}</td>
 							{% endif %}	
+
+							{%if record.year == "nan" %}
+							<td></td>
+							{% else %}
+							<td>{{record.year}}</td>
+							{% endif %}
 							<td style="display: none;">{{record.authorEnglish2}}</td>
 						</tr>
 						{% endfor %}
