--- a/klet/searchtool/templates/search.html
+++ b/klet/searchtool/templates/search.html
@@ -49,7 +49,11 @@
 					<button class="btn btn-primary" type="submit">
 						Search
 					</button>
-					<a href="{% url 'search' %}">
+					<a href="{% url 'search' %}" style="    padding: 10px;
+					margin: 10px;
+					background: #85754d;
+					border-radius: 7px;
+					color: white !important;">
 						Clear Search
 					</a>
 				</form>
@@ -72,6 +76,7 @@
 							<th>Source</th>
 							<th>Publisher</th>
 							<th style="display: none;">authorEnglish2</th>
+							<th>WorldCat Search</th>
 							<th>Year</th>
 						</tr>
 					</thead>
@@ -125,7 +130,14 @@
 							{% else %}
 							<td>{{record.publisher}}</td>
 							{% endif %}	
-
+							<td class="d-flex justify-content-center" style="border-bottom: 0px;">
+								<a href="https://worldcat.org/search?q={{record.sourceTitle}}+{{record.publisher}}+{{record.year}}" target="_blank">
+									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+										<path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"/>
+										<path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z"/>
+									</svg>
+								</a>
+							</td>
 							{%if record.year == "nan" %}
 							<td></td>
 							{% else %}
